# VOICE-AGENT

./: .gitignore
week-11/: README.md  chain.py  ingestor.py  langgraph.json  pyproject.toml  query.py
week-11/text-to-sql/: agent.py
week-14/voice-sandwich-demo/: README.md
week-14/voice-sandwich-demo/components/typescript/: server_log.txt
week-14/voice-sandwich-demo/components/typescript/src/: index.ts
week-14/voice-sandwich-demo/components/typescript/src/assemblyai/: stt.ts
week-14/voice-sandwich-demo/components/typescript/src/cartesia/: tts.ts
week-14/voice-sandwich-demo/components/web/src/: App.svelte
week-14/voice-sandwich-demo/components/web/src/lib/: websocket.ts
week-14/voice-sandwich-demo/components/web/src/lib/components/: Order.svelte  index.ts
week-14/voice-sandwich-demo/components/web/src/lib/stores/: order.ts
week-14/voice-sandwich-demo/components/web/src/routes/kitchen/: +page.svelte
week-6/invoice-processor/: .env.example  Caddyfile  README.md  docker-compose.yml
week-6/invoice-processor/apps/api/src/: env.ts
week-6/invoice-processor/apps/webapp/src/lib/: api.ts
week-7/: main.py  pyproject.toml
week-8/: README.md  chain.py  ingestor.py  pyproject.toml  query.py
